# tropical-reconstruction

./: .gitignore  Makefile  README.md  examples.py  function.py  gradient.py  hausdorff.py  optimize.py  polytope.py  pyproject.toml  requirements.txt  test.py  tzlp.py  utils.py
1n1/: reconstruct.py
dn1/: template.py  tzlp.py  utils.py
experiments/p1025944122/: losses_p1025944122_101147297.npy  losses_p1025944122_161835405.npy  losses_p1025944122_2036473225.npy  losses_p1025944122_2483830168.npy  losses_p1025944122_275138802.npy  losses_p1025944122_310300770.npy  losses_p1025944122_594715168.npy  losses_p1025944122_warmstart.npy  params.txt
experiments/p1870153859/: losses_p1870153859_212924049.npy  losses_p1870153859_253128420.npy  losses_p1870153859_2755837557.npy  losses_p1870153859_3056955765.npy  losses_p1870153859_3513413857.npy  losses_p1870153859_3803933141.npy  losses_p1870153859_4064317643.npy  losses_p1870153859_warmstart.npy  params.txt
experiments/p886325387/: losses_p886325387_185113248.npy  losses_p886325387_2500052689.npy  losses_p886325387_250219900.npy  losses_p886325387_2673383410.npy  losses_p886325387_3367973909.npy  losses_p886325387_3440735985.npy  losses_p886325387_932502193.npy  losses_p886325387_warmstart.npy  losses_p886325387_z2060554135.npy  losses_p886325387_z494367120.npy  params.txt
scripts/: draw_optimization.py  example_training_run.py  plot_losses.py  ratio.py  ratios.py  test_prune.py
test/: __init__.py  test_gradient.py  test_reconstruction.py
tropical_reconstruction/: examples.py
tropical_reconstruction/tzlp/: tzlp.py  (+2 more)
(+15 files in other folders)
