[tool.poetry]
name = "tropical-reconstruction"
version = "0.1.0"
description = ""
authors = ["George D. Torres"]
readme = "README.md"
packages = [{include = "tropical_reconstruction"}]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.24.2"
scipy = "^1.10.1"
sympy = "^1.11.1"
tqdm = "^4.65.0"
qpsolvers = "^3.1.0"
matplotlib = "^3.7.1"
opencv-python = "^4.7.0.72"
osqp = "^0.6.2.post8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
